# poetry-buildpack

./: README.md
poetry-demo/: Procfile  pyproject.toml
poetry-demo/poetry_demo/: app.py
poetry-pack/: buildpack.toml
