[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["aleksej.paschenko <aleksej.paschenko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
